--- a/quandromy/templates/users/dashboard.html
+++ b/quandromy/templates/users/dashboard.html
@@ -1,10 +1,42 @@
-{% extends 'base.html'%}
-{% block head%}
-  <title>Dash Board</title>
+{% extends 'base.html' %}
+{% block head %}
+  <title>{{user.username}}</title>
+
 {% endblock %}
 
-{% block div%}
-<div class="">
+{% block div %}
+ <div class="content-section">
+   <div class="media">
+     <img class="rounded-circle account-img my-img" src="{{user.image_file}}" alt="profile pic">
+     <div class="media-body">
+       <h2 class="account-heading">{{user.username}}</h2>
+       <p class="text-secondary">{{user.email}}</p>
+       <div class="col">
+        Following <span>{{ user.followed.count() - 1 }}</span>
+    </div>
+    <div class="col">
+      Followers <span>{{ user.followers.count() - 1 }}</span>
+  </div>
+  <hr>
+     </div>
+   </div>
+ </div>
 
-
+ <div>
+   <legend><h3>Posts</h3></legend>
+   <hr>
+    {% for post in posts %}
+    <div class="row">
+       <div class="col">
+        <img src="{{url_for('static', filename = 'postpics/' + post.picture)}}" class="card-img-top" alt="..." width="50" height="100">
+       </div>
+       <div class="col"></div>
+       <div class="col"></div>
+       <div class="col"></div>
+       <div class="col"></div>
+       <div class="col"></div>
+    </div>
+    
+    {% endfor %}
+ </div>
 {% endblock %}
