--- a/quandromy/templates/base.html
+++ b/quandromy/templates/base.html
@@ -26,8 +26,15 @@
           <a class="nav-link" href="#">Notifications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Messages</a>
+          <a href="{{ url_for('users.messages') }}">
+            Messages
+            {% set new_messages = current_user.new_messages() %}
+            {% if new_messages %}
+            <span class="">{{ new_messages }}</span>
+            {% endif %}
+        </a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('users.account')}}">Account</a>
         </li>
@@ -44,7 +51,6 @@
   <form class="form-inline my-2 my-lg-0">
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-
   </form>
 </div>
 </nav>
