--- a/quandromy/templates/users/dashboard.html
+++ b/quandromy/templates/users/dashboard.html
@@ -21,7 +21,15 @@
      </div>
    </div>
  </div>
-
+<div>Last seen {{ user.last_seen }}</div>
+<div>
+  <p>
+    <a href="{{ url_for('users.send_message',
+                        recipient=user.username) }}">
+        {{ ('Send private message') }}
+    </a>
+</p>
+</div>
  <div>
    <legend><h3>Posts</h3></legend>
    <hr>
