--- a/quandromy/templates/base.html
+++ b/quandromy/templates/base.html
@@ -65,7 +65,7 @@
 </div>
 </nav>
 {% endif %}
-  <body class = "container">
+  <body class = "container" style="background: red;">
     {% with messages = get_flashed_messages(with_categories = true)%}
       {% if messages %}
         {% for category, message in messages %}
@@ -79,13 +79,16 @@
     {% block div %}
 
     {% endblock %}
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="{{url_for('static', filename = 'jquery.js')}}" ></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script type="text/javascript">
-  
+      $(document).ready( function(){
         $(function () {
             var timer = null;
             var xhr = null;
@@ -100,13 +103,13 @@
                                 function(data) {
                                     xhr = null;
                                     elem.popover({
-                                        trigger: 'manual',
+                                        trigger: 'focus',
                                         html: true,
                                         animation: false,
                                         container: elem,
                                         content: data
                                     }).popover('show');
-                                    flask_moment_render_all();
+                                    //flask_moment_render_all();
                                 }
                             );
                     }, 1000);
@@ -123,11 +126,24 @@
                         xhr = null;
                     }
                     else {
-                        elem.popover('destroy');
+                        elem.popover('dispose');
                     }
                 }
             );
         });
+        });
+        
     </script>
+    <script>
+$(document).ready(function(){
+  $("commentBtt").click(function(){
+      var elem = $('.postID');
+    $.post("comment",
+    {
+      id: elem.first().text().trim(),
+    });
+  });
+});
+</script>
   </body>
 </html>
