--- a/quandromy/templates/users/user_popup.html
+++ b/quandromy/templates/users/user_popup.html
@@ -3,17 +3,14 @@
   <title>Pop Up</title>
 {% endblock %}
 {% block div %}
-    <table class="table bg-warning" style="width: 20%">
-    <tr>
-        <td width="64" style="border: 0px;"><img class="rounded-circle" src="{{url_for('static', filename = 'img/' + user.image_file)}}" width="100" height="100"></td>
-        <td style="border: 0px;">
-            <p>
-                <a href="{{ url_for('users.dashboard', username=user.username) }}">
-                    {{ user.username }}
-                </a>
-            </p>
-            <small class="">
-                {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+<div>
+    <img class="rounded-circle" src="{{url_for('static', filename = 'img/' + user.image_file)}}" width="100" height="100">
+    <p>
+        <a href="{{ url_for('users.dashboard', username=user.username) }}">
+            {{ user.username }}
+        </a>
+    </p>
+    {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                 {% if user.last_seen %}
                 <p>{{ ('Last seen on') }}: 
                    {{moment(user.last_seen).format('lll')}}</p>
@@ -31,8 +28,5 @@
                     </a>
                     {% endif %}
                 {% endif %}
-            </small>
-        </td>
-    </tr>
-</table>
+</div>
 {% endblock %}
