--- a/quandromy/templates/posts/post.html
+++ b/quandromy/templates/posts/post.html
@@ -65,11 +65,10 @@
 					    data-show-faces="true">
 					  </div>
 
-            <form>
-                <input type="text" name="comment">
-                <button class="commentBtt">Comment</button>
-            </form>
-                      
+            {% include 'main/_comments.html' %} 
+
     </div>
   </div>
 </div>
+
+
