--- a/quandromy/templates/main/search_results.html
+++ b/quandromy/templates/main/search_results.html
@@ -1,15 +1,23 @@
-{% extends 'base.html'%}
-{% block head %}
-  <title>About</title>
-{% endblock %}
-{% block div %}
-  <h1>Search results for in Posts: {{query}}</h1>
-  {% for post in results1 %}
-        {% include 'include1.html' %}
-  {% endfor %}
-  <hr>
-  <h1>Search results for in Users: {{query}}</h1>
-  {% for user in results2 %}
-        {% include 'include2.html' %}
-  {% endfor %}
+
+{% extends "base.html" %}
+
+{% block app_content %}
+    <h1>{{ ('Search Results') }}</h1>
+    {% for post in posts %}
+        {% include 'post.html' %}
+    {% endfor %}
+    <nav aria-label="...">
+        <ul class="pager">
+            <li class="previous{% if not prev_url %} disabled{% endif %}">
+                <a href="{{ prev_url or '#' }}">
+                    <span aria-hidden="true">&larr;</span> {{ ('Previous results') }}
+                </a>
+            </li>
+            <li class="next{% if not next_url %} disabled{% endif %}">
+                <a href="{{ next_url or '#' }}">
+                    {{ ('Next results') }} <span aria-hidden="true">&rarr;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 {% endblock %}
