Update done to the search functionality

--- a/quandromy/templates/base.html
+++ b/quandromy/templates/base.html
@@ -69,7 +69,7 @@
 </div>
 </nav>
 {% endif %}
-  <body class = "container" style="background: red;">
+  <body class = "container-fluid" style="background: red;">
     {% with messages = get_flashed_messages(with_categories = true)%}
       {% if messages %}
         {% for category, message in messages %}
