--- a/quandromy/templates/users/account.html
+++ b/quandromy/templates/users/account.html
@@ -26,7 +26,7 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
- <div class="content-section">
+ <div class="content-section row">
    <div class="media">
      <img class="rounded-circle account-img my-img" src="{{image_file}}" alt="profile pic">
      <div class="media-body">
